# ppcx-app

./: .env.example  .gitignore  Dockerfile  README.md  clusterize.ipynb  db.code-workspace  docker-compose.yaml  entrypoint.sh  get_data_advanced.ipynb  get_data_example.ipynb  ppcx_app_backup.sh  pyproject.toml  requirements.txt  ruff.toml
app/: add_cam_image_data.py  add_camera_example.py  add_data.py  add_dic_data.py  fix_db_cameras.py  load_dic_data.py  load_dic_data_old.py  manage.py  populate_collapses.py  populate_dic_data.py  populate_dic_data_by_couple.py  populate_images.py
app/glacier_monitoring_app/: admin.py  apps.py  models.py  urls.py  views.py
app/glacier_monitoring_app/migrations/: 0001_initial.py  0002_remove_camera_created_at.py  0003_remove_cameracalibration_created_at.py  0004_remove_image_checksum_md5_camera_created_at_and_more.py  0005_rename_image_height_px_image_height_px_and_more.py  0006_alter_camera_location.py  0007_rename_reference_image_dicanalysis_master_image_and_more.py  0008_remove_dicanalysis_different_image_paths_and_more.py  0009_remove_dicresult_unique_seed_point_and_more.py  0010_remove_dicanalysis_glacier_mon_master__e88802_idx_and_more.py  (+3 more)
app/planpincieux/: asgi.py  settings.py  urls.py  wsgi.py
app/ppcx_app/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
app/utils/: __init__.py
planpincieux/: populate_images.py
planpincieux/glacier_monitoring_app/: apps.py  models.py
planpincieux/planpincieux/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: database.py
src/: database.py  visualization.py
(+14 files in other folders)
